index move size char + background BW

--- a/felindra/css/style.css
+++ b/felindra/css/style.css
@@ -1,9 +1,13 @@
 .color {
     background-color: white;
+    background : url(../img/fond1.jpg) no-repeat fixed center;
+    background-size : cover;
 }
 
 .blackWhite {
     background-color: black;
+    background : url(../img/fond1_BW.jpg) no-repeat fixed center;
+    background-size : cover;
 }
 
 .normal-font {
