--- a/latotale/assets/css/main.css
+++ b/latotale/assets/css/main.css
@@ -155,7 +155,7 @@ body{
 }
 .navbar-default{
 	border-color: #262626;
-    background-color: #caced4;
+    background-color: #d6d8dc;
 }
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
 	color: #e20613;
