--- a/felindra/css/style.css
+++ b/felindra/css/style.css
@@ -1,3 +1,42 @@
+#animation {
+    background-color: black;
+    min-height: 100vh;
+    background-image: url(../img/logo.png);
+    background-size: 40% 45%;
+    /*background-size: contain;*/
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center;
+}
+
+#animation img {
+    /*bottom:15%;*/
+    position: absolute;
+    top: 50%;
+    -webkit-animation: linear;
+    -webkit-animation-name: run;
+    -webkit-animation-duration: 2s;
+}
+
+@-webkit-keyframes run {
+    0% {
+        left: 10%;
+    }
+    50% {
+        left: 24%;
+    }
+    100% {
+        left: 36%;
+    }
+}
+
+/*.container {*/
+/*    margin: 0;*/
+/*    padding: 0;*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*}*/
+
 #footer {
     text-align: center;
 }
