--- a/felindra/css/style.css
+++ b/felindra/css/style.css
@@ -15,7 +15,7 @@
     top: 50%;
     -webkit-animation: linear;
     -webkit-animation-name: run;
-    -webkit-animation-duration: 2s;
+    -webkit-animation-duration: 0.5s;
 }
 
 @-webkit-keyframes run {
@@ -30,13 +30,32 @@
     }
 }
 
-/*.container {*/
-/*    margin: 0;*/
-/*    padding: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*}*/
+#header {
+    border-radius: 10px;
+    text-align: center;
+    height: 80px;
+    line-height: 80px;
+    background-color: #222222;
+    margin-bottom: 25px;
+}
+
+#options {
+    text-align: right;
+}
 
 #footer {
     text-align: center;
+}
+
+#parameters {
+    text-align: left;
+    margin-bottom: 25px;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
 }
