--- a/felindra/css/styleBlackWhite.css
+++ b/felindra/css/styleBlackWhite.css
@@ -8,7 +8,7 @@
     background-size : cover;
 }
 
-.blackWhite #info{
+.blackWhite .info{
     background-color: black;
 }
 
@@ -29,6 +29,7 @@
 }
 
 .footerBlackWhite {
+    border: white 1px solid;
     background-color: black;
 }
 
